# bayes-probabilistic-divinas

./: pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/bayesian_pack_dv_lp-dev/: pruebas.py
