[metadata]
name = bayesian_networks_DVA
version = 0.0.2
author = DVA
author_email = lp-dev@gmail.com
description = Una libreria para construir redes bayesianas y realizar inferencia probabilística
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LPELCRACK896/bayes-probabilistic-divinas.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src